# whisper

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  docker-compose.yml  plan.md  pyproject.toml  test.py  test_main.py
backend/app/: main.py
backend/app/__tests__/routers/v1/: test_ChatRouter.py  test_HeroRouter.py  test_ItemRouter.py  test_healthz.py
backend/app/__tests__/utils/: utils.py
backend/app/entities/: __init__.py  chat_message.py  hero.py  item.py
backend/app/infra/: engine.py
backend/app/routers/v1/: ChatRouter.py  HeroRouter.py  ItemRouter.py  healthz.py
frontend/: Dockerfile  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ColorButton.tsx  Task.tsx
frontend/src/hooks/: BroadcastChannel.tsx
frontend/src/pages/: Calculator.test.ts  Calculator.tsx  CalculatorButton.tsx  Chat.tsx  Counter.tsx  Test.tsx  WhisperChat.test.tsx  WhisperChat.tsx
frontend/src/test/: setup.ts  vitest-setup.ts
terraform/: justfile  main.tf
