[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi[standard]>=0.115.12",
	"psycopg2-binary>=2.9.10",
	"pytest>=8.3.5",
	"sqlmodel>=0.0.24",
	"uvicorn>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["__tests__"]

[tool.pytest_env]
TEST = "True"

[tool.uv]
dev-dependencies = ["pytest-env>=1.1.5"]
